Adding basic chat feature and connecting it with the api

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     },
     "viewsContainers": {
       "activitybar": [
-          {
-              "id": "codeWhisperChat",
-              "title": "Code Whisper",
-              "icon": "assets/images/chat-icon.svg"
-          }
+        {
+          "id": "codeWhisperChat",
+          "title": "Code Whisper",
+          "icon": "assets/images/chat-icon.svg"
+        }
       ]
     },
     "views": {
@@ -51,20 +51,21 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "build:webview": "cd webview-ui && npm run build"
   },
   "devDependencies": {
-    "@types/vscode": "^1.87.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.87.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3",
-    "ts-loader": "^9.5.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.6",
-    "@vscode/test-electron": "^2.3.9"
+    "@vscode/test-electron": "^2.3.9",
+    "eslint": "^8.56.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.2",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
