--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "color": "#58A6FF",
     "theme": "dark"
   },
-  "publisher": "Niket Panjwani",
+  "publisher": "ai-devtools",
   "engines": {
     "vscode": "^1.87.0"
   },
@@ -82,5 +82,6 @@
   },
   "bugs": {
     "url": "https://github.com/niket-panjwani/code-whisper/issues"
-  }
+  },
+  "license": "MIT"
 }
