--- a/webview-ui/tsconfig.json
+++ b/webview-ui/tsconfig.json
@@ -18,7 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "*": ["src/*", "types/*"]
+    }
   },
   "include": [
     "src"
