--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -47,6 +47,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
+    "react-github-login": "^1.0.3",
     "style-loader": "^3.3.4"
   }
 }
