--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-whisper",
   "displayName": "Code Whisper",
-  "description": "Code Whisper is an intuitive Visual Studio Code extension that brings the power of an advanced AI coding assistant to your fingertips, ensuring a smooth and unobtrusive coding experience. Inspired by GitHub Copilot Chat, this extension offers a conversational interface where you can engage in natural dialogue to receive intelligent code suggestions, explanations, and guidance, all while maintaining your coding flow. With Code Whisper, you can streamline your development workflow and boost your productivity without disrupting your thought process. Simply describe the functionality you need, and Code Whisper will discreetly whisper relevant code snippets, examples, and insights tailored to your specific context. Whether you're writing new code, refactoring existing code, or troubleshooting issues, Code Whisper is there to assist you subtly, allowing you to stay focused and in the zone.",
+  "description": "Code Whisper is a powerful Visual Studio Code extension that integrates a chat interface within the IDE, allowing developers to directly interact with the OpenAI API for assistance with software engineering questions. This innovative tool is designed to enhance productivity and streamline the development process by providing real-time, conversational support for coding queries, problem-solving, and code insights.",
   "version": "1.0.0",
   "galleryBanner": {
     "color": "#58A6FF",
