Adding image for the application in vs code marketplace

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "code-whisper",
   "displayName": "Code Whisper",
   "description": "Code Whisper is a powerful Visual Studio Code extension that integrates a chat interface within the IDE, allowing developers to directly interact with the OpenAI API for assistance with software engineering questions. This innovative tool is designed to enhance productivity and streamline the development process by providing real-time, conversational support for coding queries, problem-solving, and code insights.",
-  "version": "1.0.0",
+  "version": "1.1.0",
+  "icon": "assets/images/chat-icon.png",
   "galleryBanner": {
     "color": "#58A6FF",
     "theme": "dark"
@@ -20,7 +21,13 @@
   "main": "./dist/extension.js",
   "contributes": {
     "capabilities": {
-      "hoverProvider": "true"
+      "hoverProvider": "true",
+      "authentication": [
+        {
+          "id": "github",
+          "scopes": ["read:user", "user:email"]
+        }
+      ]
     },
     "viewsContainers": {
       "activitybar": [
