--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   "dependencies": {
     "@types/simple-oauth2": "^5.0.7",
     "github-auth": "^3.0.2",
+    "node-nlp": "^4.27.0",
     "opn": "^6.0.0",
     "react-markdown": "^9.0.1",
     "simple-oauth2": "^5.0.0"
